# Path-Tracing-Renderer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  fragment.glsl  inputs.c  inputs.h  main.c  obj_parser.c  obj_parser.h  renderer.c  renderer.glsl  renderer.h  renderer_from_scratch.glsl  test.glsl
.github/workflows/: cmake-multi-platform.yml  cmake.yml
include/: action.h  app_state.h  app_state_display.h  arena.h  asserts.h  bvh.h  cli.h  const_string.h  epsilon.h  file_path.h  gui.h  input_handler.h  input_handler_action.h  inputs.h  mat4.h  my_string.h  rad_deg.h  renderer.h  scene.h  settings.h  small_string.h  stats.h  structs.h  tiny_string.h  utils.h  vec3.h  vec3d.h  window.h  yawpitch.h
include/app_state/: app_state_save_image.h
include/file_formats/: gltf.h  gltf_utils.h  obj_parser.h
include/gui/: file_browser.h  parameters.h  parameters_scene.h  scene_paths.h  settings.h
include/opengl/: context.h  generate_ssbo.h  gl_call.h  resolution.h  scaling.h  window_events.h
include/renderer/: buffers.h  buffers_scene.h  inputs.h  interactions.h  parameters.h  shaders.h  uniforms.h  user_data.h
include/renderer/buffers/: back.h  internal.h  parameters_buffer.h
include/scene/: aabb.h  build_tlas.h  bvh.h  camera.h  material.h  mesh.h  primitive.h  tlas.h  triangle.h
include/scene/bvh/: strategies.h
include/scene/file_formats/: gltf_utils.h
include/utils/: file_dialog.h  file_watcher.h  progressbar.h
include/window/: resolution.h  scaling.h  window_coordinate.h  window_events.h
lib/: CMakeLists.txt  Makefile  cgltf.mk  cimgui.mk  glad.mk  glfw.mk  nfd.mk  stb_image_write.mk  tracy.mk  vars.mk
lib/cgltf/: cgltf.h
lib/glad/include/glad/: gl.h
lib/include/glad/: gl.h
shaders/: renderer.glsl
src/: app_state.c  arena.c  asserts.c  bvh.c  cli.c  const_string.c  file_path.c  gui.c  input_handler.c  inputs.c  main.c  mat4.c  my_string.c  obj_parser.c  obj_parser.h  rad_deg.c  renderer.c  renderer.glsl  renderer.h  scene.c  small_string.c  stats.c  utils.c  utils.h  vec3.c  vec3d.c  window.c  yawpitch.c
src/app_state/: app_state.c  app_state_display.c  app_state_save_image.c
src/file_formats/: common.h  gltf.c  gltf.h  gltf_utils.c  obj_parser.c  obj_parser.h
src/gui/: file_browser.c  file_browser_linux.c  file_browser_windows.c  parameters.c  parameters_scene.c  scene_paths.c  settings.c
src/opengl/: context.c  generate_ssbo.c  gl_call.c  resolution.c  window_events.c
src/renderer/: buffers.c  buffers_scene.c  inputs.c  parameters.c  shaders.c  uniforms.c
src/renderer/buffers/: back.c  internal.c  parameters_buffer.c
src/scene/: aabb.c  build_blas.c  build_tlas.c  bvh.c  camera.c  triangle.c
src/scene/bvh/: strategies.c
src/scene/file_formats/: gltf.c  gltf_utils.c
src/utils/: file_dialog.c  file_watcher.c  progressbar.c
src/window/: resolution.c  window_events.c
tests/: asserts.h  main.c  tests_inputs.c  tests_inputs.h  tests_macros.c  tests_macros.h
tests/asserts/: test_asserts.c  test_asserts.h
tests/bvh/: tests_apply_lut.c  tests_apply_lut.h  tests_bvh_build.c  tests_bvh_build.h
tests/camera/: tests_camera.c  tests_camera.h
tests/file_watcher/: tests_file_watcher.c  tests_file_watcher.h
tests/gltf/: cube-camera.glb  tests_gltf.c  tests_gltf.h  tests_utils.c  tests_utils.h
tests/gltf/scenes/: cornell box.glb  cube-camera.glb  cube-from-planes.glb  rotated-cube.glb  transformed-cube.glb  two-cubes-instancing.glb  two-cubes.glb
tests/inputs/: tests_inputs.c  tests_inputs.h
tests/mat4/: tests_mat4.c  tests_mat4.h
tests/utils/: tests_utils.c  tests_utils.h
tests/yaw_pitch/: tests_yawpitch.c  tests_yawpitch.h
vulkan/: Makefile  common.c  common.h  vulkan.c  vulkan.h
